Updated the SCI MSVC files
svn-id: r38389

--- a/dists/msvc7/sci.vcproj
+++ b/dists/msvc7/sci.vcproj
@@ -366,6 +366,9 @@
 				RelativePath="..\..\engines\sci\sfx\pcm-iterator.cpp">
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\sfx\pcm_device.cpp">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\sfx\sequencer.h">
 			</File>
 			<File
@@ -376,6 +379,9 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\sfx\time.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\sfx\timer.cpp">
 			</File>
 			<Filter
 				Name="device">
@@ -390,15 +396,6 @@
 				</File>
 				<File
 					RelativePath="..\..\engines\sci\sfx\mixer\soft.cpp">
-				</File>
-			</Filter>
-			<Filter
-				Name="pcm_device">
-				<File
-					RelativePath="..\..\engines\sci\sfx\pcm_device\pcm_devices.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engines\sci\sfx\pcm_device\scummvm.cpp">
 				</File>
 			</Filter>
 			<Filter
@@ -438,15 +435,6 @@
 				</File>
 				<File
 					RelativePath="..\..\engines\sci\sfx\softseq\softsequencers.cpp">
-				</File>
-			</Filter>
-			<Filter
-				Name="timer">
-				<File
-					RelativePath="..\..\engines\sci\sfx\timer\timer_scummvm.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engines\sci\sfx\timer\timers.cpp">
 				</File>
 			</Filter>
 		</Filter>
