--- a/dists/msvc71/sci.vcproj
+++ b/dists/msvc71/sci.vcproj
@@ -380,6 +380,9 @@
 				RelativePath="..\..\engines\sci\sfx\pcm-iterator.cpp">
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\sfx\pcm_device.cpp">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\sfx\sequencer.h">
 			</File>
 			<File
@@ -390,6 +393,9 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\sfx\time.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\sfx\timer.cpp">
 			</File>
 			<Filter
 				Name="device">
@@ -404,15 +410,6 @@
 				</File>
 				<File
 					RelativePath="..\..\engines\sci\sfx\mixer\soft.cpp">
-				</File>
-			</Filter>
-			<Filter
-				Name="pcm_device">
-				<File
-					RelativePath="..\..\engines\sci\sfx\pcm_device\pcm_devices.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engines\sci\sfx\pcm_device\scummvm.cpp">
 				</File>
 			</Filter>
 			<Filter
@@ -452,15 +449,6 @@
 				</File>
 				<File
 					RelativePath="..\..\engines\sci\sfx\softseq\softsequencers.cpp">
-				</File>
-			</Filter>
-			<Filter
-				Name="timer">
-				<File
-					RelativePath="..\..\engines\sci\sfx\timer\timer_scummvm.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engines\sci\sfx\timer\timers.cpp">
 				</File>
 			</Filter>
 		</Filter>
