--- a/dists/msvc8/sci.vcproj
+++ b/dists/msvc8/sci.vcproj
@@ -517,6 +517,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\sfx\pcm_device.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\sfx\sequencer.h"
 				>
 			</File>
@@ -530,6 +534,10 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\sfx\time.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\sfx\timer.cpp"
 				>
 			</File>
 			<Filter
@@ -549,18 +557,6 @@
 				</File>
 				<File
 					RelativePath="..\..\engines\sci\sfx\mixer\soft.cpp"
-					>
-				</File>
-			</Filter>
-			<Filter
-				Name="pcm_device"
-				>
-				<File
-					RelativePath="..\..\engines\sci\sfx\pcm_device\pcm_devices.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\engines\sci\sfx\pcm_device\scummvm.cpp"
 					>
 				</File>
 			</Filter>
@@ -613,18 +609,6 @@
 				</File>
 				<File
 					RelativePath="..\..\engines\sci\sfx\softseq\softsequencers.cpp"
-					>
-				</File>
-			</Filter>
-			<Filter
-				Name="timer"
-				>
-				<File
-					RelativePath="..\..\engines\sci\sfx\timer\timer_scummvm.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\engines\sci\sfx\timer\timers.cpp"
 					>
 				</File>
 			</Filter>
