Updated the xcode project to generate Info.plist, and use the correct icon
svn-id: r38438

--- a/dists/iphone/Info.plist.in
+++ b/dists/iphone/Info.plist.in
@@ -22,5 +22,7 @@
 	<string>@VERSION@</string>
 	<key>CFBundleVersion</key>
 	<string>svn</string>
+	<key>CFBundleIconFile</key>
+	<string>icon.png</string>
 </dict>
 </plist>
