Synced the SCI MSVC project files
svn-id: r38510

--- a/dists/msvc9/sci.vcproj
+++ b/dists/msvc9/sci.vcproj
@@ -426,6 +426,26 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\scicore\exe.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\scicore\exe.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\scicore\exe_dec.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\scicore\exe_lzexe.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\scicore\exe_raw.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\scicore\resource.cpp"
 				>
 			</File>
