--- a/dists/msvc71/sci.vcproj
+++ b/dists/msvc71/sci.vcproj
@@ -311,6 +311,21 @@
 				RelativePath="..\..\engines\sci\scicore\decompress11.cpp">
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\scicore\exe.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\scicore\exe.h">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\scicore\exe_dec.h">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\scicore\exe_lzexe.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\scicore\exe_raw.cpp">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\scicore\resource.cpp">
 			</File>
 			<File
@@ -440,15 +455,6 @@
 				RelativePath="..\..\engines\sci\include\aatree.h">
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\include\conf_driver.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\conf_parse.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\conf_subsystems.h">
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\include\console.h">
 			</File>
 			<File
@@ -570,9 +576,6 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\include\uinput.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\util.h">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\include\versions.h">
