--- a/dists/msvc8/sci.vcproj
+++ b/dists/msvc8/sci.vcproj
@@ -425,6 +425,26 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\scicore\exe.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\scicore\exe.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\scicore\exe_dec.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\scicore\exe_lzexe.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\scicore\exe_raw.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\scicore\resource.cpp"
 				>
 			</File>
@@ -597,18 +617,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\include\conf_driver.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\conf_parse.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\conf_subsystems.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\include\console.h"
 				>
 			</File>
@@ -770,10 +778,6 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\include\uinput.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\util.h"
 				>
 			</File>
 			<File
