Updated the MSVC project files of the SCI engine
svn-id: r38544

--- a/dists/msvc7/sci.vcproj
+++ b/dists/msvc7/sci.vcproj
@@ -297,21 +297,6 @@
 				RelativePath="..\..\engines\sci\scicore\decompress11.cpp">
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\scicore\exe.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\scicore\exe.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\scicore\exe_dec.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\scicore\exe_lzexe.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\scicore\exe_raw.cpp">
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\scicore\resource.cpp">
 			</File>
 			<File
@@ -578,6 +563,12 @@
 		</Filter>
 		<File
 			RelativePath="..\..\engines\sci\detection.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\exereader.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\exereader.h">
 		</File>
 		<File
 			RelativePath="..\..\engines\sci\sci.cpp">
