--- a/dists/msvc8/sci.vcproj
+++ b/dists/msvc8/sci.vcproj
@@ -425,26 +425,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\scicore\exe.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\scicore\exe.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\scicore\exe_dec.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\scicore\exe_lzexe.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\scicore\exe_raw.cpp"
-				>
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\scicore\resource.cpp"
 				>
 			</File>
@@ -799,6 +779,14 @@
 		</Filter>
 		<File
 			RelativePath="..\..\engines\sci\detection.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\exereader.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\exereader.h"
 			>
 		</File>
 		<File
