Updated the MSVC project files of the SCI engine
svn-id: r38624

--- a/dists/msvc71/sci.vcproj
+++ b/dists/msvc71/sci.vcproj
@@ -573,6 +573,12 @@
 			</File>
 		</Filter>
 		<File
+			RelativePath="..\..\engines\sci\console.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\console.h">
+		</File>
+		<File
 			RelativePath="..\..\engines\sci\detection.cpp">
 		</File>
 		<File
