--- a/dists/msvc8/sci.vcproj
+++ b/dists/msvc8/sci.vcproj
@@ -774,6 +774,14 @@
 			</File>
 		</Filter>
 		<File
+			RelativePath="..\..\engines\sci\console.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\console.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\sci\detection.cpp"
 			>
 		</File>
