--- a/dists/msvc8/sci.vcproj
+++ b/dists/msvc8/sci.vcproj
@@ -54,6 +54,7 @@
 				ForceConformanceInForLoopScope="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="4"
+				WarnAsError="false"
 				SuppressStartupBanner="false"
 				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="4"
@@ -202,10 +203,6 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\engine\kernel.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\engine\kernel_compat.h"
 				>
 			</File>
 			<File
@@ -405,10 +402,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\scicore\console.cpp"
-				>
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\scicore\decompress0.cpp"
 				>
 			</File>
@@ -441,11 +434,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\scicore\script.cpp"
+				RelativePath="..\..\engines\sci\scicore\sciconsole.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\scicore\tools.cpp"
+				RelativePath="..\..\engines\sci\scicore\script.cpp"
 				>
 			</File>
 			<File
@@ -564,10 +557,6 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\engines\sci\sfx\softseq\fmopl.h"
-					>
-				</File>
-				<File
 					RelativePath="..\..\engines\sci\sfx\softseq\opl2.cpp"
 					>
 				</File>
@@ -590,10 +579,6 @@
 			>
 			<File
 				RelativePath="..\..\engines\sci\include\aatree.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\console.h"
 				>
 			</File>
 			<File
@@ -645,15 +630,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\include\hashmap.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\include\heapmgr.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\int_hashmap.h"
 				>
 			</File>
 			<File
@@ -669,15 +646,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\include\listener.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\include\menubar.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\resource.h"
 				>
 			</File>
 			<File
@@ -697,6 +666,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\include\sciconsole.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\include\sciresource.h"
 				>
 			</File>
@@ -706,10 +679,6 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\include\script.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\seg_manager.h"
 				>
 			</File>
 			<File
@@ -799,6 +768,14 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\sci\sci.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\tools.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\tools.h"
 			>
 		</File>
 	</Files>
