--- a/dists/msvc9/sci.vcproj
+++ b/dists/msvc9/sci.vcproj
@@ -207,10 +207,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\engine\kernel_compat.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\engine\kernel_types.h"
 				>
 			</File>
@@ -407,10 +403,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\scicore\console.cpp"
-				>
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\scicore\decompress0.cpp"
 				>
 			</File>
@@ -443,11 +435,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\scicore\script.cpp"
+				RelativePath="..\..\engines\sci\scicore\sciconsole.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\scicore\tools.cpp"
+				RelativePath="..\..\engines\sci\scicore\script.cpp"
 				>
 			</File>
 			<File
@@ -591,10 +583,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\include\console.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\include\engine.h"
 				>
 			</File>
@@ -659,15 +647,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\include\listener.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\include\menubar.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\resource.h"
 				>
 			</File>
 			<File
@@ -684,6 +664,10 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\include\sci_widgets.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\sciconsole.h"
 				>
 			</File>
 			<File
@@ -785,6 +769,14 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\sci\sci.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\tools.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\tools.h"
 			>
 		</File>
 	</Files>
