--- a/dists/msvc71/sci.vcproj
+++ b/dists/msvc71/sci.vcproj
@@ -33,6 +33,7 @@
 				ForceConformanceInForLoopScope="TRUE"
 				UsePrecompiledHeader="0"
 				WarningLevel="4"
+				WarnAsError="FALSE"
 				SuppressStartupBanner="FALSE"
 				Detect64BitPortabilityProblems="FALSE"
 				DebugInformationFormat="4"/>
@@ -144,9 +145,6 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\engine\kernel.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\engine\kernel_compat.h">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\engine\kernel_types.h">
@@ -296,9 +294,6 @@
 				RelativePath="..\..\engines\sci\scicore\aatree.cpp">
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\scicore\console.cpp">
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\scicore\decompress0.cpp">
 			</File>
 			<File
@@ -323,10 +318,10 @@
 				RelativePath="..\..\engines\sci\scicore\sci_memory.cpp">
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\scicore\script.cpp">
+				RelativePath="..\..\engines\sci\scicore\sciconsole.cpp">
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\scicore\tools.cpp">
+				RelativePath="..\..\engines\sci\scicore\script.cpp">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\scicore\versions.cpp">
@@ -415,9 +410,6 @@
 					RelativePath="..\..\engines\sci\sfx\softseq\amiga.cpp">
 				</File>
 				<File
-					RelativePath="..\..\engines\sci\sfx\softseq\fmopl.h">
-				</File>
-				<File
 					RelativePath="..\..\engines\sci\sfx\softseq\opl2.cpp">
 				</File>
 				<File
@@ -435,9 +427,6 @@
 			Name="include">
 			<File
 				RelativePath="..\..\engines\sci\include\aatree.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\console.h">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\include\engine.h">
@@ -476,13 +465,7 @@
 				RelativePath="..\..\engines\sci\include\gfx_widgets.h">
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\include\hashmap.h">
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\include\heapmgr.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\int_hashmap.h">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\include\kdebug.h">
@@ -494,13 +477,7 @@
 				RelativePath="..\..\engines\sci\include\list.h">
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\include\listener.h">
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\include\menubar.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\resource.h">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\include\sbtree.h">
@@ -515,6 +492,9 @@
 				RelativePath="..\..\engines\sci\include\sci_widgets.h">
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\include\sciconsole.h">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\include\sciresource.h">
 			</File>
 			<File
@@ -522,9 +502,6 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\include\script.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\seg_manager.h">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\include\sfx_core.h">
@@ -592,6 +569,12 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\sci\sci.h">
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\tools.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\tools.h">
 		</File>
 	</Files>
 	<Globals>
